[gd_scene load_steps=6 format=3 uid="uid://bgtdbsfndawjb"]

[ext_resource type="Texture2D" uid="uid://c4h8i7s7q8u7m" path="res://classroom.jpg" id="1_61oys"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_bnr4b"]
[ext_resource type="Texture2D" uid="uid://nhil0prn35y4" path="res://bg_ok.png" id="2_b4wod"]

[sub_resource type="LabelSettings" id="LabelSettings_ydyj2"]
font_size = 101
outline_size = 51
outline_color = Color(0.290196, 0.737255, 0.105882, 1)
shadow_size = 66
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(1.105, 4.145)

[sub_resource type="LabelSettings" id="LabelSettings_x0vnu"]
font_size = 101
outline_size = 51
outline_color = Color(0, 0, 0, 1)

[node name="Main menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.629675, 0.629675, 0.629675, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(960, 540)
texture = ExtResource("1_61oys")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -428.5
offset_top = -264.0
offset_right = 428.5
offset_bottom = -126.0
grow_horizontal = 2
grow_vertical = 2
text = "Belajar Basa Jawa"
label_settings = SubResource("LabelSettings_ydyj2")

[node name="Control2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bnr4b")

[node name="NinePatchRect2" type="NinePatchRect" parent="Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -599.0
offset_top = -144.0
offset_right = 361.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(648, 147)
mouse_filter = 0
texture = ExtResource("2_b4wod")
region_rect = Rect2(0, 0, 267, 267)
patch_margin_left = 82
patch_margin_top = 64
patch_margin_right = 78
patch_margin_bottom = 83

[node name="Label" type="Label" parent="Control2/NinePatchRect2"]
layout_mode = 0
offset_left = 180.0
offset_top = 75.0
offset_right = 802.0
offset_bottom = 213.0
text = "Cek Jawaban"
label_settings = SubResource("LabelSettings_x0vnu")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bnr4b")

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -649.0
offset_top = -147.0
offset_right = 647.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(648, 147)
mouse_filter = 0
texture = ExtResource("2_b4wod")
region_rect = Rect2(0, 0, 267, 267)
patch_margin_left = 82
patch_margin_top = 64
patch_margin_right = 78
patch_margin_bottom = 83

[node name="Label" type="Label" parent="Control/NinePatchRect"]
layout_mode = 0
offset_left = 348.0
offset_top = 83.0
offset_right = 970.0
offset_bottom = 221.0
text = "Cek Jawaban"
label_settings = SubResource("LabelSettings_x0vnu")

[connection signal="mouse_entered" from="Control2/NinePatchRect2" to="Control2" method="_on_nine_patch_rect_2_mouse_entered"]
[connection signal="mouse_exited" from="Control2/NinePatchRect2" to="Control2" method="_on_nine_patch_rect_2_mouse_exited"]
[connection signal="mouse_entered" from="Control/NinePatchRect" to="Control" method="_on_nine_patch_rect_mouse_entered"]
[connection signal="mouse_exited" from="Control/NinePatchRect" to="Control" method="_on_nine_patch_rect_mouse_exited"]
